# INFO_5356_Intro_to_Human_Robot_Interaction_Final_Project-Group-4-

final_project/: .app.py.swl  .app.py.swm  .app.py.swn  .app.py.swo  .app.py.swp  .app_test2.py.swp  .app_test4.py.swp  .appt.py.swp  package.xml  setup.py
final_project/final_project/: robot_control_architecture.py
final_project/resource/static/: style.css
final_project/resource/templates/: .heart.swp  .index.html.swl  .index.html.swm  .index.html.swn  .index.html.swo  .index.html.swp  .index_o.html.swp  index.html
