<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>final_project</name>
  <version>0.0.0</version>
  <description>Final_Project</description>
  <maintainer email="sk2866@cornell.edu">Final_Project</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-flask</exec_depend>
  <exec_depend>python3-flask-socketio</exec_depend>
  <exec_depend>python3-pygame</exec_depend>
  <exec_depend>python3-gtts</exec_depend>
  <exec_depend>transforms3d</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
